--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Μύτης Γιάννης - el**13133**",
   "main": "index.js",
   "scripts": {
-    "start:user-info-manager": "nodemon -L ./user-info-manager/app.js"
+    "start:all": "npm run start:ms:user-info-manager && npm run start:service:keycloak && npm run start:service:choreographer",
+    "start:ms:user-info-manager": "nodemon -L ./user-info-manager/app.js",
+    "start:service:choreographer": "docker-compose -f ./choreographer/docker-compose.yml up && docker exec -it kafka /opt/bitnami/kafka/bin/kafka-topics.sh --create --bootstrap-server localhost:9092 --replication-factor 1 --partitions 1 --topic test",
+    "stop:service:choreographer": "docker-compose -f ./choreographer/docker-compose.yml down",
+    "start:service:keycloak": "docker run -p 8080:8080 -e KEYCLOAK_ADMIN=admin -e KEYCLOAK_ADMIN_PASSWORD=admin quay.io/keycloak/keycloak:21.1.0 start-dev",
+    "stop:service:keycloak": "docker stop ca4a105970742de6978361e0518c4e926d6267c351acaf855cafa7d07dd694f8"
   },
   "keywords": [],
   "author": "",
