--- a/user-info-manager/package.json
+++ b/user-info-manager/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "avsc": "^5.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -19,7 +20,8 @@
     "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
     "keycloak-connect": "^21.1.0",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "node-rdkafka": "^2.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
