--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,29 +1,20 @@
 version: "3.0"
 services:
-  # userInfoManager:
-  #   build:
-  #     context: user-info-manager
-  #   container_name: userInfoManager
-  #   ports:
-  #   environment:
-  #   depends on:
-  #     - broker
-  #     - zookeeper
-  #     - keycloak
-  #   restart: unless-stopped
-  #   networks:
-  #     - private
-  #     - public
-  
-  # keycloak:
-  #   image: quay.io/keycloak/keycloak:21.1.0
-  #   container_name: keycloak
-  #   environment:
-  #     - KEYCLOAK_ADMIN=admin
-  #     - KEYCLOAK_ADMIN_PASSWORD=admin
-  #   ports:
-  #     - "8080:8080"
-  #   command: start-dev
+  user-info-manager:
+    build:
+      context: ./user-info-manager
+      dockerfile: Dockerfile
+    image: userinfomanager
+    container_name: userinfomanager
+    ports:
+      - "5000:${APP_PORT}"
+    env_file:
+      - .env
+    depends_on:
+      - broker
+      - zookeeper
+      - keycloak-ready
+    restart: unless-stopped
 
   keycloak-ready:
     image: gmitis/keycloak:latest
@@ -33,14 +24,16 @@ services:
       - KEYCLOAK_ADMIN_PASSWORD=admin
     ports:
       - "8080:8080"
-    command: start-dev 
-  
+    command: start-dev
+    restart: unless-stopped
+    
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.2
     container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    restart: unless-stopped
 
   broker:
     image: confluentinc/cp-kafka:7.3.2
@@ -57,10 +50,22 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    restart: unless-stopped
+    
+  
 
-networks:
-  private:
-  public:
+  # keycloak:
+  #   image: quay.io/keycloak/keycloak:21.1.0
+  #   container_name: keycloak
+  #   environment:
+  
+  #     - KEYCLOAK_ADMIN=admin
+  #     - KEYCLOAK_ADMIN_PASSWORD=admin
+  #   ports:
+  #     - "8080:8080"
+  #   command: start-dev
 
-# docker tag local-image:tagname new-repo:tagname
-# docker push new-repo:tagname
+  # frontend:
+  #   build:
+  #   container_name: 
+  #   environment:
