--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,16 @@ services:
       - broker
       - zookeeper
       - keycloak-ready
+    networks:
+      private:
+        aliases:
+          - userinfomanager
+          - broker
+          - zookeeper
+          - keycloak-ready
+      public:
+        aliases:
+          - userinfomanagerpublic
     restart: unless-stopped
 
   keycloak-ready:
@@ -25,6 +35,10 @@ services:
     ports:
       - "8080:8080"
     command: start-dev
+    networks:
+      private:
+        aliases:
+          - keycloak-ready
     restart: unless-stopped
     
   zookeeper:
@@ -33,6 +47,10 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
+    networks:
+      private:
+          aliases:
+            - zookeeper
     restart: unless-stopped
 
   broker:
@@ -50,7 +68,17 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+    networks:
+      private:
+        aliases:
+          - broker
     restart: unless-stopped
+
+networks:
+  private:
+    driver: bridge
+  public:
+    driver: bridge
     
   
 
