rename frontends' fetch service. + json validation for creation + simple plot creation

--- a/creator-bar-label-plot/config.ini
+++ b/creator-bar-label-plot/config.ini
@@ -1,8 +1,15 @@
-[Keycloak]
+[SERVER]
+PORT = 5001
+
+[KEYCLOAK]
 SERVER_URL = http://localhost:8080/
 REALM = my-charts
 CLIENT_ID = line-chart-creator-ms
 CLIENT_SECRET = T4opYUGLD6gCoLVfC09paCdgIDl2DZq9
 
-[FrontEnd]
+[FRONTEND]
 SERVER_URL = http://localhost:3000
+
+[PLOT]
+TYPE = bar_label_plot
+FORMATS = html,jpeg,png,svg
