--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,6 @@
 REACT_APP_KEYCLOAK_URL='http://localhost:8080'
 REACT_APP_BACKEND_API_URL='http://localhost:4000'
+REACT_APP_VALIDATE_API_URL='http://localhost:5000/validate'
+REACT_APP_bar_label_plot_API_URL='http://localhost:5001/create'
+REACT_APP_scatter_plot_API_URL='http://localhost:5002/create'
+REACT_APP_simple_plot_API_URL='http://localhost:5003/create'
