Chart Info manager done

--- a/chart-info-manager/package.json
+++ b/chart-info-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chart-downloader",
+  "name": "chart-info-manager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
