--- a/credit-manager/package.json
+++ b/credit-manager/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon -L app.js"
   },
-  "author": "",
+  "author": "Ioannis Mitis",
   "license": "ISC",
   "dependencies": {
     "avsc": "^5.7.7",
