--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "keycloak-js": "^21.1.0-1",
+    "papaparse": "^5.4.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
