--- a/user-info-manager/package.json
+++ b/user-info-manager/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon -L app.js",
-    "start:populateDB": "node ./db/populateDB.js",
-    "start:clearDB": "node ./db/clearDB.js"
+    "start:populateDB": "node ./db/dev/populateDB.js",
+    "start:clearDB": "node ./db/dev/clearDB.js"
   },
   "keywords": [],
   "author": "Ioannis Mitis",
@@ -19,9 +19,10 @@
     "express-async-errors": "^3.1.1",
     "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
-    "keycloak-connect": "^21.1.0",
+    "keycloak-connect": "^21.1.1",
     "mongoose": "^7.0.4",
-    "node-rdkafka": "^2.15.0"
+    "node-rdkafka": "^2.16.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
