--- a/front-end/.env
+++ b/front-end/.env
@@ -1,2 +1,6 @@
-REACT_APP_KEYCLOAK_URL='http://localhost:8080'
-REACT_APP_BACKEND_API_URL='http://localhost:4000'
+REACT_APP_BACKEND_api_url="http://localhost:4000"
+REACT_APP_uim_api_url="http://localhost:3010/api/v1"
+REACT_APP_plot_types="bar_label_plot,scatter_plot,simple_plot"
+REACT_APP_bar_label_plot_api_url="http://localhost:6000"
+REACT_APP_scatter_plot_api_url="http://localhost:6001"
+REACT_APP_simple_plot_api_url="http://localhost:6002"
