--- a/chart-info-manager/package.json
+++ b/chart-info-manager/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "avsc": "^5.7.7",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
@@ -17,7 +18,8 @@
     "express-session": "^1.17.3",
     "http-status-codes": "^2.2.0",
     "keycloak-connect": "^21.1.1",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "node-rdkafka": "^2.16.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
