--- a/front-end/.env
+++ b/front-end/.env
@@ -1,6 +1,8 @@
 REACT_APP_BACKEND_api_url="http://localhost:4000"
-REACT_APP_uim_api_url="http://localhost:5000/api/v1"
+REACT_APP_uim_api_url="http://localhost:3010/api/v1"
+REACT_APP_cm_api_url="http://localhost:3030/api/v1"
+REACT_APP_cv_api_url="http://localhost:3031/api/v1"
 REACT_APP_plot_types="bar_label_plot,scatter_plot,simple_plot"
-REACT_APP_bar_label_plot_api_url="http://localhost:6000"
-REACT_APP_scatter_plot_api_url="http://localhost:6001"
-REACT_APP_simple_plot_api_url="http://localhost:6002"
+REACT_APP_bar_label_plot_api_url="http://localhost:6001"
+REACT_APP_scatter_plot_api_url="http://localhost:6002"
+REACT_APP_simple_plot_api_url="http://localhost:6003"
