--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
+    "clipboard": "^2.0.11",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "keycloak-js": "^21.1.0-1",
