--- a/creator-downloader/config/environment.yaml
+++ b/creator-downloader/config/environment.yaml
@@ -1,9 +1,8 @@
+app_container_name: "$saas_APP_CONTAINER_NAME"
 app_port: "$saas_APP_PORT"
-app_run_type: "$saas_APP_RUN_TYPE"
 
 azure_conn_str: "$saas_AZURE_CONN_STR"
 azure_container_name: "$saas_AZURE_CONTAINER_NAME"
-azure_credential: "$saas_AZURE_CREDENTIAL"
 
 kafka_host: "$saas_KAFKA_HOST"
 kafka_port: "$saas_KAFKA_PORT"
