--- a/credit-manager/package.json
+++ b/credit-manager/package.json
@@ -2,9 +2,9 @@
   "name": "credit-manager",
   "version": "1.0.0",
   "description": "## (name)",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon -L app.js"
+    "start": "node app.js"
   },
   "author": "Ioannis Mitis",
   "license": "ISC",
@@ -18,7 +18,7 @@
     "http-status-codes": "^2.2.0",
     "keycloak-connect": "^21.1.1",
     "mongoose": "^7.1.1",
-    "node-rdkafka": "^2.16.0"
+    "node-rdkafka": "^2.16.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
