new distinct downloader folder

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,7 +38,7 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:9092,PLAINTEXT_INTERNAL://broker:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://172.18.0.11:9092,PLAINTEXT_INTERNAL://broker:29092
       KAFKA_CREATE_TOPICS: user-data:1:1, credit-data:1:1, chart-data:1:1
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
@@ -50,7 +50,7 @@ services:
 
   downloader:
     build:
-      context: ./creator-downloader
+      context: ./downloader
       args:
         - APP_PORT=6020
     container_name: downloader
@@ -61,27 +61,27 @@ services:
       - zookeeper
       - keycloak
     env_file:
-      - ./creator-downloader/.env.app
-      - ./creator-downloader/.env.downloader
+      - ./downloader/.env.app
+      - ./downloader/.env.downloader
     restart: unless-stopped
     networks:
       - saas_network
 
   simple-plot:
     build:
-      context: ./creator-downloader
+      context: ./creator
       args:
-        - APP_PORT=601
+        - APP_PORT=6013
     container_name: simple-plot
     ports:
-      - "601:601"
+      - "6013:6013"
     depends_on:
       - broker
       - zookeeper
       - keycloak
     env_file:
-      - ./creator-downloader/.env.app
-      - ./creator-downloader/.env.simple-plot
+      - ./creator/.env.app
+      - ./creator/.env.simple-plot
     restart: unless-stopped
     networks:
       - saas_network
